# CediSmart

./: .gitignore  CLAUDE.md  README.md  budget-app-blueprint.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  claude-code-review.yml  claude.yml  mobile-ci.yml
cedismart-api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test.db
cedismart-api/alembic/: env.py
cedismart-api/alembic/versions/: 0001_initial_schema.py  0002_add_opening_balance_check.py
cedismart-api/app/: main.py
cedismart-api/app/core/: config.py  database.py  dependencies.py  exceptions.py  redis.py  security.py  sms.py
cedismart-api/app/modules/accounts/: models.py  router.py  schemas.py  service.py
cedismart-api/app/modules/auth/: models.py  router.py  schemas.py  service.py
cedismart-api/app/modules/budgets/: models.py  router.py  schemas.py  service.py
cedismart-api/app/modules/categories/: models.py  router.py  schemas.py  service.py
cedismart-api/app/modules/reports/: router.py  schemas.py  service.py
cedismart-api/app/modules/transactions/: models.py  router.py  schemas.py  service.py
cedismart-api/app/modules/users/: router.py  schemas.py  service.py
cedismart-api/scripts/: seed_categories.py
cedismart-api/tests/: conftest.py  test_sms.py
cedismart-api/tests/modules/: test_accounts.py  test_auth.py  test_budgets.py  test_categories.py  test_reports.py  test_transactions.py  test_users.py
